--- a/www/custom.css
+++ b/www/custom.css
@@ -7,7 +7,7 @@ body {
   background-color: #f1f1f1;
 }
 
-.span3, .span9 {
+.span1, .span2, .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11, .span12 {
   background-color: white;
   padding: 10px;
 }
